--- a/config/database.yml
+++ b/config/database.yml
@@ -14,7 +14,7 @@ default: &default
   encoding: utf8
   pool: 5
   username: "ucan-api"
-  password: ">VZU9E+M%HBC9^yf]T])"
+  password: ""
   host: localhost
    #socket: /var/lib/mysql/mysql.sock
 
